# git-event-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: basic-ci.yml
examples/: oneshot-private.rs  oneshot.rs  watch_new_commits.rs  with-commit.rs
src/: lib.rs
