[package]
authors = ["T.J. Telan <t.telan@gmail.com>"]
categories = ["events", "loop", "callback", "handler", "signal"]
description = "Customizable event handler for updates in remote git repositories"
documentation = "https://docs.rs/git-event"
edition = "2018"
keywords = ["git"]
license = "MIT"
name = "git-event"
readme = "README.md"
repository = "https://github.com/tjtelan/git-event-rs"
version = "0.0.1"

[badges.maintenance]
status = "actively-developed"

[dependencies]
git2 = "^0.13"
git-url-parse = "^0.3"
git2_credentials = "^0.6"
eyre = "^0.6"
mktemp = "^0.4"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }