[package]
authors = ["T.J. Telan <t.telan@gmail.com>"]
categories = ["asynchronous"]
description = "Customizable event handler for updates in remote git repositories"
documentation = "https://docs.rs/git-event"
edition = "2018"
keywords = ["git"]
license = "MIT"
name = "git-event"
readme = "README.md"
repository = "https://github.com/tjtelan/git-event-rs"
version = "0.2.1"

[badges.maintenance]
status = "actively-developed"

[dependencies]
git2 = "^0.13"
git-url-parse = "^0.3"
color-eyre = "^0.5"
mktemp = "^0.4"
log = "^0.4"
chrono = "^0.4"
git-meta = "^0.2"

[dev-dependencies]
tokio = { version = "^1.1", features = ["full"] }
env_logger = "^0.8"