[package]
authors = ["T.J. Telan <t.telan@gmail.com>"]
categories = ["asynchronous"]
description = "Customizable event handler for updates in remote git repositories"
documentation = "https://docs.rs/git-event"
edition = "2021"
keywords = ["git"]
license = "MIT"
name = "git-event"
readme = "README.md"
repository = "https://github.com/tjtelan/git-event-rs"
version = "0.4.1"

[features]
default = ["shallow_clone"]
shallow_clone = []

[dependencies]
git2 = "^0.13"
git-url-parse = "^0.4"
color-eyre = "^0.6"
mktemp = "^0.4"
tracing = "^0.1"
chrono = "^0.4"
git-meta = "^0.6"

[dev-dependencies]
tokio = { version = "^1.1", features = ["full"] }
env_logger = "^0.9"

#[patch.crates-io]
#git-meta = { path = "../git-meta-rs" }